--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start:prod": "node index.js",
+    "start:dev": "nodemon index.js",
     "db:migrate": "node ./database/seed/index.js"
   },
   "keywords": [],
