--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
-MONGODB_CONNECTION_STRING=mongodb://localhost:27017
+MONGODB_CONNECTION_STRING=mongodb://mongodb:27017
 MONGODB_CONNECTION_DATABASE=drive
 
 jWT_SECRET=vsqzJUyiRxkSfnkCPpSh
