--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:prod": "node index.js",
-    "start:dev": "nodemon index.js",
-    "db:migrate": "node ./database/seed/index.js"
+    "start:dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
